--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "obp-scraper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "playwright": "^1.41.1"
+  },
+  "devDependencies": {
+    "pm2": "^5.3.0"
   },
   "keywords": [],
   "author": "",
