--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "pm2 start server.js --name scrape-api"
   },
   "dependencies": {
     "express": "^4.18.2",
     "playwright": "^1.41.1"
-  },
-  "devDependencies": {
-    "pm2": "^5.3.0"
   },
   "keywords": [],
   "author": "",
