--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "pm2 start server.js --name scrape-api"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "express": "^4.18.2",
     "playwright": "^1.41.1"
   },
