--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "adm-zip": "^0.5.16",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "playwright": "^1.41.1"
   },
